Rename SegmentsToCompact to CompactionCandidate